#
# Autoconfiguration files for proxytest (a MiX proxy)
# Konrad Rieck <kr@r0q.cx>
#

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libtre.a
libtre_a_SOURCES = regexec.cpp regcomp.cpp tre-mem.cpp tre-match-backtrack.cpp tre-match-parallel.cpp tre-ast.cpp tre-stack.cpp tre-compile.cpp tre-parse.cpp

includes = @INCLUDES@

